update itc2611 for fall2023

--- a/franske-course-information/modules/ROOT/partials/instructor-contact.adoc
+++ b/franske-course-information/modules/ROOT/partials/instructor-contact.adoc
@@ -9,8 +9,8 @@
 
 *Office and Hours:*
 
-* Online office hours: Tu 6:00-7:00pm
-* On campus office hours not available for Spring 2023
+* Online office hours: TBD
+* On campus office hours: Wedenesdays 5:00-6:00pm
 * Webcam/phone/in-person meetings also available other times by appointment.
 
 *Phone:*
