--- a/franske-course-information/modules/itc-2611/pages/syllabus.adoc
+++ b/franske-course-information/modules/itc-2611/pages/syllabus.adoc
@@ -2,8 +2,8 @@
 Course Name: Cisco Enterprise Network Core Technologies (CCNP 1) +
 Course Number: ITC-2611-91 +
 Instructor: Dr. Ben Franske +
-Term: Fall 2022 (8/22/2022-12/15/2022) +
-Meetings: Tu 6:00-8:30pm +
+Term: Fall 2023 (8/22/2023-12/12/2023) +
+Meetings: Tu 6:00-7:30pm +
 Location: Online
 
 == Instructor Contact Information
@@ -18,8 +18,12 @@ Explores the core technologies of an enterprise network. Focuses on implementing
 
 === Required Resources
 * Official Cert Guide: CCNP and CCIE Enterprise Core ENCOR 350-401 (Edgeworth, Garza Rios, Gooley, Hucaby) ISBN: 978-1587145230 
++
+--
 CAUTION: Yes, This textbook really is required. Unlike many Cisco Networking Academy classes there is not a free online version on Netacad!
+
 TIP: The first edition printed version of this book has many errors in it. You can avoid these errors by getting the ebook version _from the publisher_ Cisco Press. Note that Amazon and other ebook versions are not necessarily updated.
+--
 * CCNP and CCIE Enterprise Core & CCNP Enterprise Advanced Routing Portable Command Guide (Empson, Gargano) ISBN: 978-0135768167
 
 === Optional Resources
@@ -34,7 +38,7 @@ WARNING: It is important that you keep an accurate email address on file with th
 --
 
 == Lab Time
-* Packet Tracer can not be used to complete labs in this course
+* Packet Tracer can/may not be used to complete labs in this course
 * All labs for this class may be completed remotely using the Netlab system
 * Equipment access, both physical on campus and remote Netlab, is on a first come, first served basis.
 * Open on campus lab time may also be available under the supervision of the lab assistant or ITC department instructors, contact the instructor or ITC lab assistant for more information. Students who do not show up for open lab hours they have scheduled may be restricted from registering for open lab hours in the future.
