--- a/franske-course-information/modules/itc-2611/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2611/pages/schedule.adoc
@@ -1,5 +1,365 @@
 = ITC-2611 Official Course Schedule
 
+== Aug 22
+=== Readings to do this week
+* Chapter 1 
+* Chapter 2
+
+TIP: Be sure to watch the videos that go along with the chapters you read each week. A link to the video playlist can be found at the top of the Netacad course page.
+
+=== Other Work to do this week
+* Chapter 1 Online Discussion First Post
+* Chapter 2 Online Discussion First Post
+* Chapter 1 Labs
+* Chapter 2 Labs
+
+TIP: Labs in this class are done through the Netlab system and reports on them are submitted through Netacad. Access to Netlab is by clicking the ITC Passport link in the D2L page for this class. Instructions on which labs to complete and how to write a lab report are on the assignments page of this info site.
+
+TIP: Discussion posts are done through the Cisco Netacad site in this class. Instructions on how to write a discussion post are on the assignments page of this info site.
+
+=== Assignments Due by 6pm Today
+* None
+
+== Aug 29
+=== Readings to do this week
+* Chapter 3
+* Chapter 4
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 1 Response Posts
+* Online Discussion Forum Chapter 2 Response Posts
+* Online Discussion Forum Chapters 3 First Post
+* Online Discussion Forum Chapters 4 First Post
+* Chapter 3 Labs
+* Chapter 4 Labs
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 1 First Post
+* Online Discussion Forum Chapter 2 First Post
+* Chapter 1 Lab Report
+* Chapter 2 Lab Report
+
+== Sep 5
+
+TIP: Don't forget to meet with your instructor over Zoom each week during the scheduled class time!
+
+=== Readings to do this week
+* Chapter 5
+* Chapter 6
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 3 Response Posts
+* Online Discussion Forum Chapter 4 Response Posts
+* Online Discussion Forum Chapters 5 First Post
+* Online Discussion Forum Chapters 6 First Post
+* Chapter 5 Labs
+* Chapter 6 Labs
+* Take Chapters 1-5 Exam
+
+TIP: Exams are taken on the Netacad site in this course.
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 1 Response Posts
+* Online Discussion Forum Chapter 2 Response Posts
+* Online Discussion Forum Chapters 3 First Post
+* Online Discussion Forum Chapters 4 First Post
+* Chapter 3 Lab Report
+* Chapter 4 Lab Report
+
+== Sep 12
+=== Readings to do this week
+* Chapter 7
+* Chapter 8
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 5 Response Posts
+* Online Discussion Forum Chapter 6 Response Posts
+* Online Discussion Forum Chapters 7 First Post
+* Online Discussion Forum Chapters 8 First Post
+* Chapter 7 Labs
+* Chapter 8 Labs
+* Chapter 6-7 Exam
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 3 Response Posts
+* Online Discussion Forum Chapter 4 Response Posts
+* Online Discussion Forum Chapters 5 First Post
+* Online Discussion Forum Chapters 6 First Post
+* Chapter 5 Lab Report
+* Chapter 6 Lab Report
+* Chapters 1-5 Exam
+
+== Sep 19
+=== Special Notes
+
+NOTE: It is Student Success Day today, instructor meetings are not required tonight as there are other activities available on and off campus for you to participate in. However, as there will not be instructor meetings the next two weeks if you need any assistance with the course it is strongly suggessted you attend the Zoom meeting tonight.
+
+=== Readings to do this week
+* Chapter 9
+* Chapter 10
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 7 Response Posts
+* Online Discussion Forum Chapter 8 Response Posts
+* Online Discussion Forum Chapters 9 First Post
+* Online Discussion Forum Chapters 10 First Post
+* Chapter 9 Labs
+* Chapter 10 Labs
+* Chapter 8-10 Exam
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 5 Response Posts
+* Online Discussion Forum Chapter 6 Response Posts
+* Online Discussion Forum Chapters 7 First Post
+* Online Discussion Forum Chapters 8 First Post
+* Chapter 8 Lab Report
+* Chapters 6-7 Exam
+
+
+== Sep 26
+=== Special Notes
+
+NOTE: There will be no required instructor meetings tonight (or next week). Instead of a synchonous meeting you must complete a course progress evaluation on the Netacad site betweek 6:00 and 7:30pm tonight.
+
+=== Readings to do this week
+* Chapter 11
+* Chapter 12
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 9 Response Posts
+* Online Discussion Forum Chapter 10 Response Posts
+* Online Discussion Forum Chapters 11 First Post
+* Online Discussion Forum Chapters 12 First Post
+* Chapter 11 Labs
+* Chapter 12 Labs
+* Chapter 11-12 Exam
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 7 Response Posts
+* Online Discussion Forum Chapter 8 Response Posts
+* Online Discussion Forum Chapters 9 First Post
+* Online Discussion Forum Chapters 10 First Post
+* Chapter 9 Lab Report
+* Chapter 10 Lab Report
+* Chapter 8-10 Exam
+
+== Oct 4
+=== Special Notes
+
+NOTE: There will be no required instructor meetings tonight (they restart next week). Instead of a synchonous meeting you must complete a course progress evaluation on the Netacad site betweek 6:00 and 7:30pm tonight.
+
+=== Readings to do this week
+* Chapter 13
+* Chapter 14
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 11 Response Posts
+* Online Discussion Forum Chapter 12 Response Posts
+* Online Discussion Forum Chapters 13 First Post
+* Online Discussion Forum Chapters 14 First Post
+* Chapter 13-14 Exam
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 9 Response Posts
+* Online Discussion Forum Chapter 10 Response Posts
+* Online Discussion Forum Chapters 11 First Post
+* Online Discussion Forum Chapters 12 First Post
+* Chapter 11 Lab Report
+* Chapter 12 Lab Report
+* Chapter 11-12 Exam
+
+== Oct 10
+=== Readings to do this week
+* Chapter 15
+* Chapter 16
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 13 Response Posts
+* Online Discussion Forum Chapter 14 Response Posts
+* Online Discussion Forum Chapters 15 First Post
+* Online Discussion Forum Chapters 16 First Post
+* Chapter 15 Labs
+* Chapter 16 Labs
+* Chapter 15-16 Exam
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 11 Response Posts
+* Online Discussion Forum Chapter 12 Response Posts
+* Online Discussion Forum Chapters 13 First Post
+* Online Discussion Forum Chapters 14 First Post
+* Chapter 13-14 Exam
+
+== Oct 17
+=== Readings to do this week
+* Chapter 17
+* Chapter 18
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 15 Response Posts
+* Online Discussion Forum Chapter 16 Response Posts
+* Online Discussion Forum Chapters 17 First Post
+* Online Discussion Forum Chapters 18 First Post
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 13 Response Posts
+* Online Discussion Forum Chapter 14 Response Posts
+* Online Discussion Forum Chapters 15 First Post
+* Online Discussion Forum Chapters 16 First Post
+* Chapter 15 Lab Report
+* Chapter 16 Lab Report
+* Chapter 15-16 Exam
+
+== Oct 24
+=== Readings to do this week
+* Chapter 19
+* Chapter 20
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 17 Response Posts
+* Online Discussion Forum Chapter 18 Response Posts
+* Online Discussion Forum Chapters 19 First Post
+* Online Discussion Forum Chapters 20 First Post
+* Chapter 17-19 Exam
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 15 Response Posts
+* Online Discussion Forum Chapter 16 Response Posts
+* Online Discussion Forum Chapters 17 First Post
+* Online Discussion Forum Chapters 18 First Post
+
+== Oct 31
+=== Readings to do this week
+* Chapter 21
+* Chapter 22
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 19 Response Posts
+* Online Discussion Forum Chapter 20 Response Posts
+* Online Discussion Forum Chapters 21 First Post
+* Online Discussion Forum Chapters 22 First Post
+* Chapter 20-21 Exam
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 17 Response Posts
+* Online Discussion Forum Chapter 18 Response Posts
+* Online Discussion Forum Chapters 19 First Post
+* Online Discussion Forum Chapters 20 First Post
+* Chapter 17-19 Exam
+
+== Nov 7
+=== Readings to do this week
+* Chapter 23
+* Chapter 24
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 21 Response Posts
+* Online Discussion Forum Chapter 22 Response Posts
+* Online Discussion Forum Chapters 23 First Post
+* Online Discussion Forum Chapters 24 First Post
+* Chapter 24 Labs
+* Chapter 22-24 Exam
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 19 Response Posts
+* Online Discussion Forum Chapter 20 Response Posts
+* Online Discussion Forum Chapters 21 First Post
+* Online Discussion Forum Chapters 22 First Post
+* Chapter 20-21 Exam
+
+== Nov 14
+=== Readings to do this week
+* Chapter 25
+* Chapter 26
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 23 Response Posts
+* Online Discussion Forum Chapter 24 Response Posts
+* Online Discussion Forum Chapters 25 First Post
+* Online Discussion Forum Chapters 26 First Post
+* Chapter 25 Labs
+* Chapter 26 Labs
+* Chapter 25-26 Exam
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 21 Response Posts
+* Online Discussion Forum Chapter 22 Response Posts
+* Online Discussion Forum Chapters 23 First Post
+* Online Discussion Forum Chapters 24 First Post
+* Chapter 24 Lab Report
+* Chapter 22-24 Exam
+
+== Nov 21
+=== Readings to do this week
+* Chapter 27
+* Chapter 28
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 25 Response Posts
+* Online Discussion Forum Chapter 26 Response Posts
+* Online Discussion Forum Chapters 27 First Post
+* Online Discussion Forum Chapters 28 First Post
+* Chapter 28 Labs
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 23 Response Posts
+* Online Discussion Forum Chapter 24 Response Posts
+* Online Discussion Forum Chapters 25 First Post
+* Online Discussion Forum Chapters 26 First Post
+* Chapter 25 Lab Report
+* Chapter 26 Lab Report
+* Chapter 25-26 Exam
+
+== Nov 28
+=== Readings to do this week
+* Chapter 29
+
+=== Other Work to do this week
+* Online Discussion Forum Chapter 27 Response Posts
+* Online Discussion Forum Chapter 28 Response Posts
+* Online Discussion Forum Chapters 29 First Post
+* Chapters 27-29 Exam
+* Review for final exams
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 25 Response Posts
+* Online Discussion Forum Chapter 26 Response Posts
+* Online Discussion Forum Chapters 27 First Post
+* Online Discussion Forum Chapters 28 First Post
+* Chapter 28 Lab Report
+
+== Dec 5
+=== Special Notes
+* No course meeting required today, contact your instructor if you would like to schedule one.
+
+=== Other Work to do this week
+* Online Discussion Forum Chapters 23 Response Post
+* Take Skills Final Exam *Must be done between Dec 5-9! See instructions from your instructor*
+* ENCOR Certification Practice Exam
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapter 27 Response Posts
+* Online Discussion Forum Chapter 28 Response Posts
+* Online Discussion Forum Chapters 29 First Post
+* Chapter 27-29 Exam
+
+== Dec 12
+=== Special Notes
+* No course meeting required today, contact your instructor if you would like to schedule one.
+
+=== Assignments Due by 6pm Today
+* Online Discussion Forum Chapters 29 Response Post
+* ENCOR Certification Practice Exam
+
+=== Assignments Due by 11:59pm Today
+* Netacad Course Feedback
+* Online Final Exam
+
+include::program-info:ROOT:partial$stdfooter.adoc[]
+
+
+
+= ITC-2611 Official Course Schedule
+
 == Official Course Schedule
 [%autowidth,options="header"]
 |=====
