--- a/franske-course-information/modules/itc-2300/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2300/pages/schedule.adoc
@@ -1,31 +1,182 @@
 = ITC-2300 Official Course Schedule
 
-== Official Course Schedule
-[%autowidth,options="header"]
-|==========
-| Date    | Week     | Readings to do before the next date                                                                                                                                                                                  | Work to do before the next date                                                      | Assignments Due (Today by 6:00pm unless otherwise noted)                                                                                                                                                                                                   | Notes                                   
-| 24-Aug  | 1        | Introduction to Virtualization (complete whitepaper), Proxmox VE Fundamentals, Installing Proxmox VE                                                                                                                 | Review Syllabus/Schedule, Check Netlab Access and ensure you are enrolled in the class on Netlab                                        |                                                                                                                                                                                                                                                            |                                         
-| 31-Aug  | 2        | Proxmox VE Cluster and VM Management, Creating Containers                                                                                                                                                            | Proxmox Installation Lab                                                             | Proxmox Installation Discussion First Posts                                                                                                                                                                                                                | No instructor meeting required this week
-| 7-Sep   | 3        | vmWare vSphere Basics (complete whitepaper), vSphere 6.7 Installation and Setup Guide (Pages 73-76, 194-218), vSphere 6.7 Virtual Machine Administration (Pages 13-27, 100-191)                       | Proxmox VE Containes & Clusters Lab                                                  | Proxmox Installation Lab Report, Proxmox Installation Discussion All Posts, Proxmox VE Containers & Clusters Discussion First Posts                                                                                                                        |                                         
-| 14-Sep  | 4        | vCenter 6.7 Server Installation and Setup (p. 10-22, 40-65), vCenter 6.7 Server and Host Management (p. 25-76)             | VMware ESXi Installation Lab                                                         | Proxmox VE Containers & Clusters Lab Report, Proxmox VE Containers & Clusters Discussion All Posts, VMware ESXi Installation Discussion First Posts, Proxmox Exam                                                                                          |                                         
-| 21-Sep  | 5        | vSphere 6.7 Command Line Concepts and Examples (p. 10-30), vmWare KB1038043, vCenter 6.7 Server and Host Management (p. 144-160), vSphere 6.7 Virtual Machine Administration (Pages 27-61), vSphere 6.7 Platform Services Controller Administration (p. 26-42)  | VMware vCenter Installation Lab                                                      | VMware ESXi Install Lab Report, VMware ESXi Installation Discussion All Posts, VMware vCenter Installation First Posts, VMware ESXi Exam                                                                                                                   |                                         
-| 28-Sep  | 6        | Read/Watch: Introduction to VoIP with Asterisk Materials (see below)                                                                                                                                                 | VMware vSphere Administration Lab                                                    | VMware vCenter Install Lab Report, VMware vCenter Installation Discussion All Posts, VMware vSphere Administration Discussion First Posts                                                                                            |                                         
-| 5-Oct   | 7        | Read: VoIP: Provisioning, Voicemail, and SIP (see below)                                                                                                                                                             | Introduction to VoIP Labs (see Assignments page)                                     | VMware vSphere Administration Lab Report, VMware vSphere Administration Discussion All Posts, Introduction to VoIP First Posts, VMware vCenter and Administration Exam                                                                                         |                                         
-| 12-Oct  | 8        | Read: T1 and PSTN Access Materials (see below)                                                                                                                                                                       | Provisioning, Voicemail, and SIP Labs (see Assignments page)                         | Introduction to VoIP Lab, Introduction to VoIP All Posts, VoIP: Provisioning, Voicemail, and SIP First Posts, Introduction to VoIP Exam                                                                                                                    |                                         
-| 19-Oct  | 9        | Read: GUI Asterisk Configuration Materials (see below)                                                                                                                                                               | T1 and PSTN Access Labs (see Assignments page)                                       | VoIP: Provisioning, Voicemail, and SIP Lab Report, VoIP: Provisioning, Voicemail, and SIP Discussion All Posts, T1 and PSTN Access Discussion First Posts, VoIP: Provisioning, Voicemail, and SIP Lab Exam                                                 |                                         
-| 26-Oct  | 10       | Getting Started with DevNet Readings (see below for links)                                                                                                                                                           | GUI Asterisk Configuration Labs (see Assignments page)                               | T1 and PSTN Access Lab Report, T1 and PSTN Access Discussion All Posts, GUI Asterisk Configuration Discussion First Posts, T1 and PSTN Access Exam                                                                                                         |                                         
-| 2-Nov   | 11       | REST APIs and Introducing Network Programmability Readings (see below for links)                                                                                                                                     | Getting Started with DevNet Lab (see Assignments page)                               | GUI Asterisk Configuration Lab Report, GUI Asterisk Configuration Discussion All Posts, Getting Started with DevNet Discussion First Posts, GUI Asterisk Configuration Exam                                                                                |                                         
-| 9-Nov   | 12       | Model Driven Network Programmability and IOS XR Readings (see below for links)                                                                                                                                       | REST API Fundamentals & Network Programmability Lab (see Assignments page)           | Getting Started with DevNet Lab Report, Getting Started with DevNet Discussion All Posts, REST API Fundamentals & Network Programmability Discussion First Posts, Getting Started with DevNet Exam                                                         |                                         
-| 16-Nov  | 13       | Getting Started with Ansible for Network Programmability Readings (see below for links)                                                                                                                              | Model Driven Network Programmability and IOS XR Lab (see Assignments page)           | REST APIs and Introducing Network Programmability Lab Report, REST APIs and Introducing Network Programmability All Posts, Model Driven Network Programmability and IOS XR Discussion First Posts, REST APIs and Introducing Network Programmability Exam  |                                         
-| 23-Nov  | 14       | Readings as required for your case study projects                                                                                                                                                                    | Getting Started with Ansible for Network Programmability Lab (see Assignments page)  | Model Driven Network Programmability and IOS XE Lab Report,Model Driven Network Programmability and IOS XE Readings All Posts, Getting Started with Ansible for Network Programmability First Posts, Model Driven Network Programmability and IOS XE Exam  |                                         
-| 30-Nov  | 15       | Readings as required for your case study projects                                                                                                                                                                    | Start work on your case study project                                                | Getting Started with Ansible for Network Programmability Lab Report, Getting Started with Ansible for Network Programmability All Posts, Getting Started with Ansible for Network Programmability Exam                                                     |                                         
-| 7-Dec   | 16       | Readings as required for your case study projects                                                                                                                                                                    | Finish work on your case study project and practice presentation                     |                                                                                                                                                                                                                                                            |                                         
-| 14-Dec  | FE Week |     |       | Case Study Presentations, Case Study Lab Reports, Online Final Exam | Instructor meeting not required this week
-|==========
+== Aug 23
+=== Readings to do before next week
+* Introduction to Virtualization (complete whitepaper)
+* Proxmox VE Fundamentals
+* Installing Proxmox VE
 
-== Readings
+TIP: These readings can be found on the ITC CLASS server which is accessed through a link in this course's D2L page.
 
-=== Introduction to VoIP with Asterisk
+=== Work to do in/during class time tonight
+* Check Netlab Access and ensure you are enrolled in the class on Netlab
+
+=== Other Work to do this week
+* Review Syllabus/Schedule
+* Online Discussion Forum Proxmox Installation Readings First Post
+
+TIP: Some of the labs (even those done in person) in this class are done through the Netlab system and reports on them are submitted through the ITC CLASS server. Access to Netlab is by clicking the ITC Passport link in the D2L page for this class. Instructions on which labs to complete and how to write a lab report are on the assignments page of this info site.
+
+TIP: Discussion posts are done through the ITC CLASS server in this class. Instructions on how to write a discussion post are on the assignments page of this info site.
+
+=== Assignments Due by 6pm Today
+* None
+
+== Aug 30
+=== Special Notes
+
+NOTE: No instructor meeting is required this week
+
+=== Readings to do before next week
+* Proxmox VE Cluster and VM Management
+* Creating Containers
+
+=== Work to do in/during class time tonight
+* Proxmox Installation Lab
+
+=== Other Work to do this week
+* Proxmox VE Containers & Clusters Discussion First Posts
+* Proxmox Installation Discussion All Posts
+
+=== Assignments Due by 6pm Today
+* Proxmox Installation Discussion First Posts
+
+== Sep 6
+
+TIP: Don't forget to meet with your instructor during the scheduled class time!
+
+=== Readings to do before next week
+* vmWare vSphere Basics (complete whitepaper)
+* vSphere 6.7 Installation and Setup Guide (Pages 73-76, 194-218)
+* vSphere 6.7 Virtual Machine Administration (Pages 13-27, 100-191)
+
+=== Work to do in/during class time tonight
+* Proxmox VE Containes & Clusters Lab
+
+=== Other Work to do this week
+* Proxmox VE Containers & Clusters Discussion All Posts
+* VMware ESXi Installation Discussion First Posts
+* Proxmox Exam
+
+TIP: Exams are taken on the ITC CLASS server in this course.
+
+=== Assignments Due by 6pm Today
+* Proxmox Installation Lab Report
+* Proxmox Installation Discussion All Posts
+* Proxmox VE Containers & Clusters Discussion First Posts
+
+== Sep 13
+=== Readings to do before next week
+* vCenter 6.7 Server Installation and Setup (p. 10-22, 40-65)
+* vCenter 6.7 Server and Host Management (p. 25-76)
+
+=== Work to do in/during class time tonight
+* VMware ESXi Installation Lab
+
+=== Other Work to do this week
+* VMware ESXi Installation Discussion All Posts
+* VMware vCenter Installation First Posts
+* VMware ESXi Exam
+
+=== Assignments Due by 6pm Today
+* Proxmox VE Containers & Clusters Lab Report
+* Proxmox VE Containers & Clusters Discussion All Posts
+* VMware ESXi Installation Discussion First Posts
+* Proxmox Exam
+
+== Sep 20
+=== Readings to do before next week
+* vSphere 6.7 Command Line Concepts and Examples (p. 10-30)
+* vmWare KB1038043
+* vCenter 6.7 Server and Host Management (p. 144-160)
+* vSphere 6.7 Virtual Machine Administration (Pages 27-61)
+* vSphere 6.7 Platform Services Controller Administration (p. 26-42)
+
+=== Work to do in/during class time tonight
+* VMware vCenter Installation Lab
+
+=== Other Work to do this week
+* VMware vCenter Installation Discussion All Posts
+* VMware vSphere Administration Discussion First Posts
+
+=== Assignments Due by 6pm Today
+* VMware ESXi Install Lab Report
+* VMware ESXi Installation Discussion All Posts
+* VMware vCenter Installation First Posts
+* VMware ESXi Exam
+
+
+== Sep 27
+=== Special Notes
+
+NOTE: There will be no required instructor meetings tonight (or next week) and the lab on campus will not be open during class time. Instead of a synchonous meeting you must complete a course progress evaluation on the ITC CLASS site betweek 6:00 and 8:30pm tonight.
+
+=== Readings to do before next week
+
+=== Other Work to do this week
+* VMware vSphere Administration Lab
+* VMware vCenter Administration Discussion All Posts
+* VMware vCenter and Administration Exam
+
+=== Assignments Due by 6pm Today
+* VMware vCenter Install Lab Report
+* VMware vCenter Installation Discussion All Posts
+* VMware vSphere Administration Discussion First Posts
+
+== Oct 4
+=== Special Notes
+
+NOTE: There will be no required instructor meetings tonight (they restart next week). Instead of a synchonous meeting you must complete a course progress evaluation on the Netacad site betweek 6:00 and 7:30pm tonight.
+
+=== Readings to do before next week
+* Readings for the network programmability unit are embedded within the lab activities. See the xref:assignments.adoc#_network_programmability_labs[Network Prgammability Lab Activities] for this week.
+
+=== Other Work to do this week
+* Getting Started with DevNet Lab (see xref:assignments.adoc#_network_programmability_labs[Assignments page])
+* Getting Started with DevNet Discussion First Posts
+
+=== Assignments Due by 6pm Today
+* VMware vSphere Administration Lab
+* VMware vCenter Administration Discussion All Posts
+* VMware vCenter and Administration Exam
+
+== Oct 10
+=== Special Notes
+
+NOTE: We return to the classroom lab tonight, be sure to come for your weekly instructor meeting.
+
+
+=== Readings to do before next week
+* Readings for the network programmability unit are embedded within the lab activities. See the xref:assignments.adoc#_network_programmability_labs[Network Prgammability Lab Activities] for this week.
+
+=== Other Work to do this week
+* REST API Fundamentals & Network Programmability Lab (see xref:assignments.adoc#_network_programmability_labs[Assignments page])
+* Getting Started with DevNet Discussion All Posts
+* REST API Fundamentals & Network Programmability Discussion First Posts
+* Getting Started with DevNet Exam
+
+=== Assignments Due by 6pm Today
+* Getting Started with DevNet Lab (see xref:assignments.adoc#_network_programmability_labs[Assignments page])
+* Getting Started with DevNet Discussion First Posts
+
+== Oct 18
+=== Readings to do this week
+* Readings for the network programmability unit are embedded within the lab activities. See the xref:assignments.adoc#_network_programmability_labs[Network Prgammability Lab Activities] for this week.
+
+=== Other Work to do this week
+* Model Driven Network Programmability and IOS XR Lab (see xref:assignments.adoc#_network_programmability_labs[Assignments page])
+* REST API Fundamentals & Network Programmability Discussion All Posts
+* Model Driven Network Programmability and IOS XR Discussion First Posts
+* REST APIs and Introducing Network Programmability Exam
+
+=== Assignments Due by 6pm Today
+* REST API Fundamentals & Network Programmability Lab Report
+* Getting Started with DevNet Discussion All Posts
+* REST API Fundamentals & Network Programmability Discussion First Posts
+* Getting Started with DevNet Exam
+
+== Oct 25
+=== Readings to do before next week
 * https://youtu.be/6hqZfAy_0UM[VIDEO: Asterisk from Scratch - Part 1 - Intro to Asterisk & Asterisk Architecture]
 * https://youtu.be/qFO_XvyvbNg[VIDEO: Asterisk from Scratch - Part 2 - Installing Asterisk & Intro to Dial Plan]
 * https://youtu.be/JT64gVNT1TY[VIDEO: Asterisk from Scratch - Part 4 - Introduction to Dial Plan (First 12:30 ONLY)]
@@ -38,7 +189,21 @@
 * http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/asterisk-DP-Basics-SECT-2.html[A Simple Dialplan]
 * http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/asterisk-DP-Basics-SECT-3.html[Building an Interactive Dialplan]
 
-=== VoIP: Provisioning, Voicemail, and SIP
+=== Other Work to do this week
+* Getting Started with Ansible for Network Programmability Lab (see xref:assignments.adoc#_network_programmability_labs[Assignments page])
+* Model Driven Network Programmability and IOS XE Readings All Posts
+* Getting Started with Ansible for Network Programmability First Posts
+* Introduction to VoIP with Asterisk First Posts
+* Model Driven Network Programmability and IOS XE Exam
+
+=== Assignments Due by 6pm Today
+* Model Driven Network Programmability and IOS XR Lab Report
+* REST API Fundamentals & Network Programmability Discussion All Posts
+* Model Driven Network Programmability and IOS XR Discussion First Posts
+* REST APIs and Introducing Network Programmability Exam
+
+== Nov 1
+=== Readings to do before next week
 * https://youtu.be/JT64gVNT1TY[VIDEO: Asterisk from Scratch - Part 4 - Introduction to Dial Plan (Continuing from 12:30 through end)]
 * https://wiki.asterisk.org/wiki/display/DIGIUM/A-Series+Provisioning[Digium A-Series Phone Provisioning]
 * https://support.digium.com/s/article/A-Phone-Config-Web?ui-force-components-controllers-recordGlobalValueProvider.RecordGvp.getRecord=1&r=6[Digium A-Series Phone Web Interface]
@@ -51,7 +216,24 @@
 * http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/Voicemail_id263499.html[Asterisk Voicemail]
 * http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/Voicemail_id292544.html[Asterisk Dialplan Voicemail Integration]
 
-=== VoIP: T1 and PSTN Access
+=== Work to do in/during class time tonight
+* Introduction to VoIP Labs (see Assignments page)
+
+=== Other Work to do this week
+* Getting Started with Ansible for Network Programmability All Posts
+* Introduction to VoIP All Posts
+* VoIP: Provisioning, Voicemail, and SIP First Posts
+* Introduction to VoIP Exam
+
+=== Assignments Due by 6pm Today
+* Getting Started with Ansible for Network Programmability Lab Report
+* Getting Started with Ansible for Network Programmability First Posts
+* Model Driven Network Programmability and IOS XE Readings All Posts
+* Introduction to VoIP with Asterisk First Posts
+* Model Driven Network Programmability and IOS XE Exam
+
+== Nov 7
+=== Readings to do before next week
 * http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/asterisk-OutsideConn-SECT-1.html[The Basics of Trunking]
 * https://www.voip-info.org/did/[DIDs and Trunking]
 * http://t1rex.blogspot.com/2011/11/cas-vs-pri-voice-channels.html[CAS vs PRI Trunking]
@@ -70,7 +252,23 @@ NOTE: This is an older reference and the SIP configuration shown uses sip.conf w
 * https://www.cisco.com/c/en/us/td/docs/ios-xml/ios/voice/voiceport/configuration/15-mt/vp-15-mt-book/vp-overview.html[Cisco IOS Voice Port Configuration Guide: Voice Port Configuration Overview]
 * https://www.cisco.com/c/en/us/td/docs/voice_ip_comm/cucme/srnd/design/guide/cmesrnd/gatewy.html[Cisco Unified CallManager Express Solution Reference Network Design Guide: Voice Gateways]
 
-=== VoIP: GUI Asterisk Configuration
+=== Work to do in/during class time tonight
+* Provisioning, Voicemail, and SIP Labs (see Assignments page)
+
+=== Other Work to do this week
+* VoIP: Provisioning, Voicemail, and SIP Discussion All Posts
+* T1 and PSTN Access Discussion First Posts
+* VoIP: Provisioning, Voicemail, and SIP Lab Exam
+
+=== Assignments Due by 6pm Today
+* Introduction to VoIP Lab Report
+* Getting Started with Ansible for Network Programmability All Posts
+* Introduction to VoIP All Posts
+* VoIP: Provisioning, Voicemail, and SIP First Posts
+* Introduction to VoIP Exam
+
+== Nov 15
+=== Readings to do before next week
 * https://wiki.freepbx.org/display/PPS/Installing+SNG7+Official+Distro[FreePBX Installation Guide]
 * https://wiki.freepbx.org/display/FPG/FreePBX+Distro[FreePBX Registration]
 * https://wiki.freepbx.org/display/FPG/Configuring+Your+PBX[FreePBX: Configuring Your PBX] - Skip the section on "Setting Up SIPStation Trunks"
@@ -83,8 +281,74 @@ NOTE: This is an older reference and the SIP configuration shown uses sip.conf w
 * https://wiki.freepbx.org/display/PPS/FreePBX+Distro+First+Steps+After+Installation[FreePBX First Steps]
 * https://github.com/chan-sccp/chan-sccp/wiki/FreePBX_Setup[Chan-SCCP FreePBX Setup]
 
-=== Network Programmability Readings
-Readings for the network programmability unit are embedded within the lab activities. See the xref:assignments.adoc#_network_programmability_labs[Network Prgammability Lab Activities].
+=== Work to do in/during class time tonight
+* T1 and PSTN Access Labs (see Assignments page)
 
+=== Other Work to do this week
+* T1 and PSTN Access Discussion All Posts
+* GUI Asterisk Configuration Discussion First Posts
+* T1 and PSTN Access Exam
+
+=== Assignments Due by 6pm Today
+* VoIP: Provisioning, Voicemail, and SIP Lab Report
+* VoIP: Provisioning, Voicemail, and SIP Discussion All Posts
+* T1 and PSTN Access Discussion First Posts
+* VoIP: Provisioning, Voicemail, and SIP Lab Exam
+
+== Nov 22
+=== Readings to do before next week
+* Readings as required for your case study projects
+
+=== Work to do in/during class time tonight
+* GUI Asterisk Configuration Labs (see Assignments page)
+
+=== Other Work to do this week
+* GUI Asterisk Configuration Discussion All Posts
+* GUI Asterisk Configuration Exam
+
+=== Assignments Due by 6pm Today
+* T1 and PSTN Access Lab Report
+* T1 and PSTN Access Discussion All Posts
+* GUI Asterisk Configuration Discussion First Posts
+* T1 and PSTN Access Exam
+
+== Nov 28
+=== Readings to do before next week
+* Readings as required for your case study projects
+
+=== Work to do in/during class time tonight
+* Work on your case study project
+
+=== Other Work to do this week
+* Work on your case study project
+* Take Final Exam
+
+=== Assignments Due by 6pm Today
+* GUI Asterisk Configuration Discussion Lab Report
+* GUI Asterisk Configuration Discussion All Posts
+* GUI Asterisk Configuration Exam
+
+== Dec 6
+=== Readings to do before next week
+* Readings as required for your case study projects
+
+=== Work to do in/during class time tonight
+* Work on your case study project
+
+=== Other Work to do this week
+* Work on your case study presentation
+* Work on your case study lab report
+
+=== Assignments Due by 6pm Today
+* Final Online Exam
+
+== Dec 12
+=== Special NOTE
+
+NOTE: You will be presenting your case studies in class tonight
+
+=== Assignments Due by 6pm Today
+* Case Study Presentations
+* Case Study Lab Reports
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
