--- a/franske-course-information/modules/itc-2300/pages/syllabus.adoc
+++ b/franske-course-information/modules/itc-2300/pages/syllabus.adoc
@@ -2,7 +2,7 @@
 Course Name: Information Technology Services and Applications +
 Course Number: ITC-2300-91 +
 Instructor: Dr. Ben Franske +
-Term: Fall 2022 (8/22/2022-12/15/2022) +
+Term: Fall 2023 (8/23/2023-12/13/2023) +
 Meetings: W 6:00-8:30pm +
 Location: B144
 
@@ -41,7 +41,7 @@ The student will be able to:
 * Students will document evidence of business skill practice in an electronic portfolio.
 
 == Course Design
-This course will be taught as a hybrid course with regular instructor meetings. This means that you and your lab partner will be meeting regularly with the instructor during the on campus course time to assess your progress unless you have received special permission from the instructor. Additional details about this are available on the course website. 
+This course will be taught as a hybrid course with regular instructor meetings. This means that you and your lab partner will be meeting regularly with the instructor during the on campus course time to assess your progress unless you have received special permission from the instructor. Portions of some units and activities may be completed online but others will require on campus lab work. Additional details about this are available on the course website. 
 
 == Assignments and Grading
 Grades will be determined by performance on unit multiple-choice tests, lab exercises, participation, a skills exam, and a final exam. A description of assignments is available from the course website. It is expected that assignments will be completed and turned in on time and as specified.
