update office hours

--- a/franske-course-information/modules/ROOT/partials/instructor-contact.adoc
+++ b/franske-course-information/modules/ROOT/partials/instructor-contact.adoc
@@ -9,7 +9,7 @@
 
 *Office and Hours:*
 
-* Online office hours: TBD
+* Online office hours: Tuesdays 5:00-6:00pm
 * On campus office hours: Wedenesdays 5:00-6:00pm
 * Webcam/phone/in-person meetings also available other times by appointment.
 
