--- a/franske-course-information/modules/itc-2300/pages/lab-vmware-vcenterinstallation.adoc
+++ b/franske-course-information/modules/itc-2300/pages/lab-vmware-vcenterinstallation.adoc
@@ -38,16 +38,14 @@ NOTE: If you make a mistake and need to have one or both of your HV VMs erased s
 . Set a root password for your VCSA server during the installation process, be sure to write this down! 
 +
 --
-NOTE: It is strongly suggested you use "VCSA#itc2300" as the administrative password so that you can reference it here and your instructor can assist with issues in your lab.
+NOTE: It is strongly suggested you use "VCSAroot#itc2300" as the administrative password so that you can reference it here and your instructor can assist with issues in your lab.
 --
-. When given the option you should install vCenter Server with an Embedded Platform Services Controller
 . When asked about the appliance size choose a "Tiny" installation and "Default" storage size.
 . Select the checkbox to enable "Thin-Disk Mode"
-. Use the correct static IP address for the VCSA from the allocation you received for your pod above and choose to synchronize time with the ESXi appliance host. The IP address should also be used as the system name.
+. Set the correct static IP address for the VCSA from the allocation you received for your pod above.
 . The first phase of the installation will take quite a while to complete. Once it is done you will be prompted to start stage 2
 . Choose to synchronize time with the ESXi host and enable ssh access
-. When creating a new SSO domain use "podX.local" (where X is replaced by your pod letter) as your SSO Domain Name
-. Set the site name to Pod-X (where X is replaced by your pod letter)
+. When creating a new SSO domain use "podX.local" (where X is replaced by your pod ID letter) as your SSO Domain Name. Set the single-sign on password to VCSAsso#itc2300
 . After the installation completes use your credentials (administrator@podX.local) to log in to the VCSA web client at the address provided.
 . Spend a few minutes exploring the VCSA web client interface
 . Create a new Datacenter and give it a name
