--- a/franske-course-information/modules/itc-2300/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2300/pages/schedule.adoc
@@ -206,14 +206,14 @@ NOTE: We return to the classroom lab tonight, be sure to come for your weekly in
 == Nov 1
 === Readings to do before next week
 * https://youtu.be/JT64gVNT1TY[VIDEO: Asterisk from Scratch - Part 4 - Introduction to Dial Plan (Continuing from 12:30 through end)]
-* https://wiki.asterisk.org/wiki/display/DIGIUM/A-Series+Provisioning[Digium A-Series Phone Provisioning]
+* https://help.sangoma.com/community/s/article/Phones-A-Series-Provisioning[Sangoma/Digium A-Series Phone Provisioning]
 * https://support.digium.com/s/article/A-Phone-Config-Web?ui-force-components-controllers-recordGlobalValueProvider.RecordGvp.getRecord=1&r=6[Digium A-Series Phone Web Interface]
-* https://wiki.asterisk.org/wiki/display/AST/PJSIP+Configuration+Sections+and+Relationships[PJSIP Config Sections and Relationships]
-* https://wiki.asterisk.org/wiki/display/DIGIUM/Provisioning[Digium D-Series Phone Provisioning]
-* https://wiki.asterisk.org/wiki/display/DIGIUM/Digium+Phone+Module+for+Asterisk+%28DPMA%29+v+3.5.0[Introduction to DPMA]
-* https://wiki.asterisk.org/wiki/display/DIGIUM/DPMA+Installation[DPMA Installation Instructions]
-* https://wiki.asterisk.org/wiki/display/DIGIUM/DPMA+Configuration[DPMA Configuration]
-* https://wiki.asterisk.org/wiki/display/DIGIUM/Digium+Phones+when+used+with+DPMA[SIP Configuration for DPMA Phones]
+* https://docs.asterisk.org/Configuration/Channel-Drivers/SIP/Configuring-res_pjsip/PJSIP-Configuration-Sections-and-Relationships/[PJSIP Config Sections and Relationships]
+* https://help.sangoma.com/community/s/article/Phones-Provisioning-D-Series[Sangoma/Digium D-Series Phone Provisioning]
+* https://support.digium.com/s/article/Phones-Desk-Phone-Module-for-Asterisk-DPMA[Introduction to DPMA]
+* http://downloads.digium.com/pub/telephony/res_digium_phone/README[DPMA Installation Instructions] - Download this README file and open in a text editor to read
+* https://support.digium.com/s/article/Phones-DPMA-Configuration[DPMA Configuration]
+* https://support.digium.com/s/article/Phones-Sangoma-Phones-when-used-with-DPMA[SIP Configuration for Sangoma/Digium DPMA Phones]
 * http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/Voicemail_id263499.html[Asterisk Voicemail]
 * http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/Voicemail_id292544.html[Asterisk Dialplan Voicemail Integration]
 
