itc2300 fix dpma wiki resource link

--- a/franske-course-information/modules/itc-2300/pages/lab-asterisk-resdigiumconf.adoc
+++ b/franske-course-information/modules/itc-2300/pages/lab-asterisk-resdigiumconf.adoc
@@ -46,6 +46,6 @@ After to re-read the file you can run the `*digium_phones reconfigure all*` comm
 
 == Additonal Resources
 
-* https://wiki.asterisk.org/wiki/display/DIGIUM/DPMA+Configuration[DPMA Configuration]
+* https://help.sangoma.com/community/s/article/Phones-DPMA-Configuration[DPMA Configuration]
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
