sp24 2621 update schedule

--- a/franske-course-information/modules/ROOT/partials/instructor-contact.adoc
+++ b/franske-course-information/modules/ROOT/partials/instructor-contact.adoc
@@ -9,8 +9,8 @@
 
 *Office and Hours:*
 
-* Online office hours: Tuesdays 5:00-6:00pm
-* On campus office hours: Wedenesdays 5:00-6:00pm
+* Online office hours: By appointment only for Spring 2024
+* On campus office hours: By appointment only for Spring 2024
 * Webcam/phone/in-person meetings also available other times by appointment.
 
 *Phone:*
