--- a/franske-course-information/modules/itc-2621/pages/syllabus.adoc
+++ b/franske-course-information/modules/itc-2621/pages/syllabus.adoc
@@ -8,7 +8,7 @@ Meetings: Not Required (See details below) +
 Location: Online
 
 --
-NOTE: In Spring 2024 this course is being offered as a "tutorial" due to the low enrollment in the course. _In a tutorial, faculty meet with students for one-third of the course’s student-credit value and students work independently for the remaining two-thirds._ This is a sort of blend between a course and an independent study. As a result there are some changes to how this course is traditionally offered.
+NOTE: In Spring 2024 this course is being offered as a "tutorial" due to the low enrollment in the course. _In a tutorial, faculty meet with students for one-third of the course's student-credit value and students work independently for the remaining two-thirds._ This is a sort of blend between a course and an independent study. As a result there are some changes to how this course is traditionally offered and the amount of instructor availability.
 --
 
 == Instructor Contact Information
